--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.o
 You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) <br>
 
 <pre style=" font-size:15px; color:FF0000; ">
-This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
-You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
+  This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
+  Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
+  You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
+<input type="text">
 
