--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ You can reach me at scortesz@udel.edu, I will be updating this website regularly
   Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
-<input type="text">
+<input type="text" max="5">
 
