--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering <br>
-Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi <br>
-You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) <br>
-
 <pre style=" font-size:15px; color:FF0000; ">
   This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
   Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
-<input type="text" max="5">
+<input type="text" maxlenght="10">
 
