--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
   Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
-<input type="text" maxlenght="10">
+<input type="text" maxlength="10">
 
