--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
-
+<input type="number" max="5">
+<input type="date" max="2021-09-04">
