--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <pre style=" font-size:15px; color:FF0000; ">
   This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-  Here is the link to my repository: https://github.com/Zebxcore/Zebxcore.github.oi 
+  Here is the link to my repository: <a href="https://github.com/Zebxcore/Zebxcore.github.oi"/> https://github.com/Zebxcore/Zebxcore.github.oi
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
 <input type="number" max="5">
 <input type="date" max="2021-09-04">
+<button 
