--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <pre style=" font-size:15px; color:FF0000; ">
   This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-  Here is the link to my repository: <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
-  You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
+  Here is the link to my repository: 
+</pre>
+<a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
+<pre style=" font-size:15px; color:FF0000; ">
+You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
 <input type="number" max="5">
