--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@ You can reach me at scortesz@udel.edu, I will be updating this website regularly
 <input type="text" maxlength="10">
 <input type="number" max="5">
 <input type="date" max="2021-09-04">
-<button 
+<button type="button">
+  Nos vimos
+</button>
