--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 </pre>
 <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
 <pre style=" font-size:15px; color:FF0000; ">
-You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
+  You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
 <input type="number" max="5">
 <input type="date" max="2021-09-04">
 <button type="button">
-  Nos vimos
+  Let's go
 </button>
