Testing some more

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <pre style=" font-size:15px; color:FF0000; ">
   This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-  Here is the link to my repository: 
+  Here is the link to my repository:
+  <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> 
+    https://github.com/Zebxcore/Zebxcore.github.oi 
+  </a>
 </pre>
-<a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
-<pre style=" font-size:15px; color:FF0000; ">
+<pre style="font-size:15px;">
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
-<input type="number" max="5">
-<input type="date" max="2021-09-04">
+<input type="number" min="0";max="5">
+<input type="date" max="2030-12-31">
 <button type="button">
   Let's go
 </button>
