--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<pre style=" font-size:15px; color:FF0000; ">
+<pre style=" font-size:15px;color:FF0000;">
   This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-  Here is the link to my repository:
-  <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> 
-    https://github.com/Zebxcore/Zebxcore.github.oi 
-  </a>
+  Here is the link to my repository: <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
 </pre>
-<pre style="font-size:15px;">
+<pre style=" font-size:15px;color:FF0000;">
   You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
 </pre>
 <input type="text" maxlength="10">
