--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </pre>
 <input type="text" maxlength="10">
 <input type="number" min="0";max="5">
-<input type="date" max="2030-12-31">
+<input type="date" active max="2030-12-31">
 <button type="button">
   Let's go
 </button>
