Created style sheet and changed index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
-<pre style=" font-size:15px;color:FF0000;">
-  This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-  Here is the link to my repository: <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> https://github.com/Zebxcore/Zebxcore.github.oi </a>
-</pre>
-<pre style=" font-size:15px;color:FF0000;">
-  You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :)
-</pre>
-<input type="text" maxlength="10">
-<input type="number" min="0";max="5">
-<input type="date" active max="2030-12-31">
-<button type="button">
-  Let's go
-</button>
+<!DOCTYPE html>
+  <title>
+    Sebastian Cortes' Portfolio
+  </title>
+  <div>
+    <h1>
+      CISC275 - Intro to Software Engineering
+    </h1>
+    <p style=" font-size:15px;color:FF0000;">
+      This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
+      You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> here </a>
+      You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not)
+    </p>
+  </div>
+  <div>
+    <h1>
+      Portfolio
+    </h1>
+    <p>
+      
+    </p>
+  </div>
+  <div>
+    <h1>
+      ChangeLog
+    </h1>
+    <p>
+      09/03/2021 Initial GitHub repository and webpage created
+      09/09/2021 Added Portfolio, ChangeLog and TODO
+      09/09/2021 Corrections made to webpage intro and index.html
+    </p>
+  </div>
+  <div>
+    <h1>
+      TODO
+    </h1>
+    <p>
+      # Practice more HTML and read on more advance tags
+      # Start implementing CSS styles to Portfolio website
+      # Read and watch more tutorials on Javascript/Typescript
+      # Read and watch tutorials for React and hooks
+      # Read and watch tutorials for Boostrap
+      # Start flashcard game website with Typescript/CSS/HTML
+      #Implementation of more advance techniques
+    </p>
+  </div>
+</html>
