Added more info to index.html and style using CSS

--- a/index.html
+++ b/index.html
@@ -1,47 +1,107 @@
 <!DOCTYPE html>
-  <title>
-    Sebastian Cortes' Portfolio
-  </title>
-  <div>
-    <h1>
-      CISC275 - Intro to Software Engineering
-    </h1>
-    <p style=" font-size:15px;color:FF0000;">
-      This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-      You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> here </a>
-      You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not)
-    </p>
-  </div>
-  <div>
-    <h1>
-      Portfolio
-    </h1>
-    <p>
-      
-    </p>
-  </div>
-  <div>
-    <h1>
-      ChangeLog
-    </h1>
-    <p>
-      09/03/2021 Initial GitHub repository and webpage created
-      09/09/2021 Added Portfolio, ChangeLog and TODO
-      09/09/2021 Corrections made to webpage intro and index.html
-    </p>
-  </div>
-  <div>
-    <h1>
-      TODO
-    </h1>
-    <p>
-      # Practice more HTML and read on more advance tags
-      # Start implementing CSS styles to Portfolio website
-      # Read and watch more tutorials on Javascript/Typescript
-      # Read and watch tutorials for React and hooks
-      # Read and watch tutorials for Boostrap
-      # Start flashcard game website with Typescript/CSS/HTML
-      #Implementation of more advance techniques
-    </p>
-  </div>
+  <head>
+
+    <link rel="stylesheet" href="portfolio_Styles.css">
+    <meta charset="utf-8">
+    <title> Sebastian Cortes' Portfolio </title>
+    <meta description="Portfolio for CISC275 - Intro to Software Engineering">
+
+  </head>
+
+  <body>
+
+
+    <div class="row">
+      <div class="col">
+        <h1>
+          CISC275 - Intro to Software Engineering
+        </h1>
+        <p>
+          <br> This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
+          <br> You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> here </a>
+          <br> You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not)
+        </p>
+      </div>
+      <div class="col">
+        <img src="https://cdn.discordapp.com/attachments/792492389738479647/885656730644676658/unknown.png" alt="Highschool Graduation, 2017">
+      </div>
+    </div>
+
+
+    <div>
+      <div>
+        <h1>
+          Portfolio
+        </h1>
+      </div>
+
+      <div>
+        <h2>
+          Milestone Week #1
+        </h2>
+        <p>
+          <br> * I've been talking with friends that are Software Engineers working for actual companies already for the most part
+          <br>   without adding much to my portfolio this week. They were helping me with the basics of HTML, CSS and some Typescript.
+          <br> * I have watched a couple Youtube videos on HTML like <a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=1194s"> this one </a>
+          <br>   were the explanations were easy to understand and directions were easy to follow.
+          <br> * I worked on Git as well. I spent quite some time playing around with shell commands and installing the required software for the course,
+          <br>   like NodeJS and Git. I linked everything to VSCode and now I just work from VSCode without the need to open GitHub.
+          <br> * I went over all the documentation for HTML <a href="https://htmlreference.io/"> here. </a>
+          <br> * I barely went over the documentation for CSS <a href="https://cssreference.io/"> here. </a>
+          <br> * Most of the HTML I wrote for this website either came from <a href="https://marksheet.io/html-syntax.html"> here</a>,from the advice of a couple friends on 
+          <br>   how to style and make things look "nicer" or from the video mentioned above.
+          <br> * Used <a href="https://www.w3schools.com/howto/howto_css_two_columns.asp"> this</a> website to build a flexbox for my picture and the Introduction to my website using some basic CSS and HTML.
+        </p>
+      </div>
+
+      <div>
+        <h2>
+          Milestone Week #2
+        </h2>
+        <p>
+          <br> Coming Soon...
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <h1>
+          ChangeLog
+        </h1>
+        <h3>
+          09/09/2021
+        </h3>
+        <p>   
+          <br> * Added Portfolio, ChangeLog and TODO
+          <br> * Corrections made to webpage intro and index.html
+          <br> * Added info to Milestone Week #1
+        </p>
+        <h3>
+          09/03/2021
+        </h3>
+        <p>
+          <br> * Initial GitHub repository and webpage created 
+        </p>
+      </div>
+
+
+      <div class="col">
+        <h1>
+          TODO
+        </h1>
+        <p>
+          <br> # Practice more HTML and read on more advance tags
+          <br> # Start implementing CSS styles to Portfolio website
+          <br> # Read and watch more tutorials on Javascript/Typescript
+          <br> # Read and watch tutorials for React and hooks
+          <br> # Read and watch tutorials for Boostrap
+          <br> # Start flashcard game website with Typescript/CSS/HTML
+          <br> # Implementation of more advance techniques
+        </p>
+      </div>
+    </div>
+
+  </body>
+
 </html>
