Color changes and more Changelog entries added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <br> * Most of the HTML I wrote for this website either came from <a href="https://marksheet.io/html-syntax.html"> here</a>,from the advice of a couple friends on 
           <br>   how to style and make things look "nicer" or from the video mentioned above.
           <br> * Used <a href="https://www.w3schools.com/howto/howto_css_two_columns.asp"> this</a> website to build a flexbox for my picture and the Introduction to my website using some basic CSS and HTML.
+          <br> * Grabbed lots of styling techniques and methods on how to put color and give more shape to my page in <a href="https://www.w3schools.com/">here.</a>
         </p>
       </div>
 
@@ -76,6 +77,8 @@
           <br> * Added Portfolio, ChangeLog and TODO
           <br> * Corrections made to webpage intro and index.html
           <br> * Added info to Milestone Week #1
+          <br> * Added picture of myself
+          <br> * Gave color to text and background
         </p>
         <h3>
           09/03/2021
