--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         </h1>
         <p>
           <br> # Practice more HTML and read on more advance tags
-          <br> # Start implementing CSS styles to Portfolio website
+          <br> # Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI">this</a> video out later)
           <br> # Read and watch more tutorials on Javascript/Typescript
           <br> # Read and watch tutorials for React and hooks
-          <br> # Read and watch tutorials for Boostrap
-          <br> # Start flashcard game website with Typescript/CSS/HTML
+          <br> # Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc">this</a> video for flexboxing)
+          <br> # Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects
           <br> # Implementation of more advance techniques
         </p>
       </div>
