Formatted text with lists for readability

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+
   <head>
 
     <link rel="stylesheet" href="portfolio_Styles.css">
@@ -17,9 +19,9 @@
           CISC275 - Intro to Software Engineering
         </h1>
         <p>
-          <br> This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering 
-          <br> You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi"> here </a>
-          <br> You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not)
+          This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering <br>
+          You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi" target="_blank"> here </a> <br>
+          You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not lol)
         </p>
       </div>
       <div class="col">
@@ -39,20 +41,23 @@
         <h2>
           Milestone Week #1
         </h2>
-        <p>
-          <br> * I've been talking with friends that are Software Engineers working for actual companies already for the most part
-          <br>   without adding much to my portfolio this week. They were helping me with the basics of HTML, CSS and some Typescript.
-          <br> * I have watched a couple Youtube videos on HTML like <a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=1194s"> this one </a>
-          <br>   were the explanations were easy to understand and directions were easy to follow.
-          <br> * I worked on Git as well. I spent quite some time playing around with shell commands and installing the required software for the course,
-          <br>   like NodeJS and Git. I linked everything to VSCode and now I just work from VSCode without the need to open GitHub.
-          <br> * I went over all the documentation for HTML <a href="https://htmlreference.io/"> here. </a>
-          <br> * I barely went over the documentation for CSS <a href="https://cssreference.io/"> here. </a>
-          <br> * Most of the HTML I wrote for this website either came from <a href="https://marksheet.io/html-syntax.html"> here</a>,from the advice of a couple friends on 
-          <br>   how to style and make things look "nicer" or from the video mentioned above.
-          <br> * Used <a href="https://www.w3schools.com/howto/howto_css_two_columns.asp"> this</a> website to build a flexbox for my picture and the Introduction to my website using some basic CSS and HTML.
-          <br> * Grabbed lots of styling techniques and methods on how to put color and give more shape to my page in <a href="https://www.w3schools.com/">here.</a>
-        </p>
+        <ul>
+          <li> I've been talking with friends that are Software Engineers working for actual companies already for the most part
+               without adding much to my portfolio this week. They were helping me with the basics of HTML, CSS and some Typescript. </li>
+
+          <li> I have watched a couple Youtube videos on HTML like <a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=1194s" target="_blank"> this one </a>
+               were the explanations were easy to understand and directions were easy to follow. </li>
+
+          <li> I worked on Git as well. I spent quite some time playing around with shell commands and installing the required software for the course,
+               like NodeJS and Git. I linked everything to VSCode and now I just work from VSCode without the need to open GitHub. </li>
+
+          <li> I went over all the documentation for HTML <a href="https://htmlreference.io/" target="_blank">here. </a> </li>
+          <li> I barely went over the documentation for CSS <a href="https://cssreference.io/" target="_blank"> here. </a> </li>
+          <li> Most of the HTML I wrote for this website either came from <a href="https://marksheet.io/html-syntax.html" target="_blank"> here</a>,from the advice of a couple friends on 
+               how to style and make things look "nicer" or from the video mentioned above. </li>
+          <li> Used <a href="https://www.w3schools.com/howto/howto_css_two_columns.asp" target="_blank"> this</a> website to build a flexbox for my picture and the Introduction to my website using some basic CSS and HTML. </li>
+          <li> Grabbed lots of styling techniques and methods on how to put color and give more shape to my page in <a href="https://www.w3schools.com/" target="_blank">here.</a> </li>
+        </ul>
       </div>
 
       <div>
@@ -70,22 +75,32 @@
         <h1>
           ChangeLog
         </h1>
+
+        <h3>
+          11/09/2021
+        </h3>
+        <ul>
+          <li>Formated text better with more HTML tags</li>
+          <li> </li>
+        </ul>
+
         <h3>
           09/09/2021
         </h3>
-        <p>   
-          <br> * Added Portfolio, ChangeLog and TODO
-          <br> * Corrections made to webpage intro and index.html
-          <br> * Added info to Milestone Week #1
-          <br> * Added picture of myself
-          <br> * Gave color to text and background
-        </p>
+        <ul>   
+          <li>Added Portfolio, ChangeLog and TODO </li>
+          <li>Corrections made to webpage intro and index.html </li>
+          <li>Added info to Milestone Week #1 </li>
+          <li>Added picture of myself </li>
+          <li>Gave color to text and background </li>
+        </ul>
+
         <h3>
           09/03/2021
         </h3>
-        <p>
-          <br> * Initial GitHub repository and webpage created 
-        </p>
+        <ul>
+          <li> Initial GitHub repository and webpage created </li>
+        </ul>
       </div>
 
 
@@ -93,15 +108,15 @@
         <h1>
           TODO
         </h1>
-        <p>
-          <br> # Practice more HTML and read on more advance tags
-          <br> # Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI">this</a> video out later)
-          <br> # Read and watch more tutorials on Javascript/Typescript
-          <br> # Read and watch tutorials for React and hooks
-          <br> # Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc">this</a> video for flexboxing)
-          <br> # Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects
-          <br> # Implementation of more advance techniques
-        </p>
+        <ul>
+         <li> Practice more HTML and read on more advance tags </li>
+         <li> Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI" target="_blank">this</a> video out later) </li>
+         <li> Read and watch more tutorials on Javascript/Typescript </li>
+         <li> Read and watch tutorials for React and hooks </li>
+         <li> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
+         <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
+         <li> Implementation of more advance techniques </li>
+        </ul>
       </div>
     </div>
 
