--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <link rel="stylesheet" href="portfolio_Styles.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title> Sebastian Cortes' Portfolio </title>
     <meta description="Portfolio for CISC275 - Intro to Software Engineering">
@@ -12,113 +12,116 @@
 
   <body>
 
+    <header id="main-header">
+      <h1>
+        CISC275 - Intro to Software Engineering
+      </h1>
+    </header>
 
-    <div class="row">
-      <div class="col">
-        <h1>
-          CISC275 - Intro to Software Engineering
-        </h1>
-        <p>
-          This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering <br>
-          You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi" target="_blank"> here </a> <br>
-          You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not lol)
-        </p>
-      </div>
-      <div class="col">
-        <img src="https://cdn.discordapp.com/attachments/792492389738479647/885656730644676658/unknown.png" alt="Highschool Graduation, 2017">
-      </div>
-    </div>
-
-
-    <div>
+    <section>
       <div>
-        <h1>
-          Portfolio
-        </h1>
+        <div class="row">
+          <div class="col">
+            <p id="intro"> 
+              This is Sebastian Cortes' portfolio for CISC275 - Intro to Software Engineering <br><br>
+              You can find a link to my repository <a href="https://github.com/Zebxcore/Zebxcore.github.oi" target="_blank"> here</a>. 
+              You can reach me at scortesz@udel.edu, I will be updating this website regularly so expect bugs everywhere :) (or not lol)
+            </p>
+          </div>
+          <div class="col">
+            <div>
+              <img id="intro-img"; src="img/profile.png"; alt="Highschool Graduation, 2017">
+            </div>
+          </div>
+        </div>
       </div>
+    </section>
 
-      <div>
-        <h2>
-          Milestone Week #1
-        </h2>
-        <ul>
-          <li> I've been talking with friends that are Software Engineers working for actual companies already for the most part
-               without adding much to my portfolio this week. They were helping me with the basics of HTML, CSS and some Typescript. </li>
+    <br>
+    <hr>
+    <br>
 
-          <li> I have watched a couple Youtube videos on HTML like <a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=1194s" target="_blank"> this one </a>
-               were the explanations were easy to understand and directions were easy to follow. </li>
+    <nav id="main-bar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="about-me.html">About me</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
+    </nav>
+    
+    <br>
+    <hr>
+    <br>
 
-          <li> I worked on Git as well. I spent quite some time playing around with shell commands and installing the required software for the course,
-               like NodeJS and Git. I linked everything to VSCode and now I just work from VSCode without the need to open GitHub. </li>
+    <section>
+      <div class="row">
+        <div class="col">
+          <h1>
+            Change Log
+          </h1>
 
-          <li> I went over all the documentation for HTML <a href="https://htmlreference.io/" target="_blank">here. </a> </li>
-          <li> I barely went over the documentation for CSS <a href="https://cssreference.io/" target="_blank"> here. </a> </li>
-          <li> Most of the HTML I wrote for this website either came from <a href="https://marksheet.io/html-syntax.html" target="_blank"> here</a>,from the advice of a couple friends on 
-               how to style and make things look "nicer" or from the video mentioned above. </li>
-          <li> Used <a href="https://www.w3schools.com/howto/howto_css_two_columns.asp" target="_blank"> this</a> website to build a flexbox for my picture and the Introduction to my website using some basic CSS and HTML. </li>
-          <li> Grabbed lots of styling techniques and methods on how to put color and give more shape to my page in <a href="https://www.w3schools.com/" target="_blank">here.</a> </li>
-        </ul>
+          <h3>
+            09/13/2021
+          </h3>
+          <ul>
+            <li> Split index.html into more files and changed layout even more with CSS</li>
+          </ul>
+
+          <h3>
+            09/12/2021
+          </h3>
+          <ul>
+            <li> Better formatting style like containers, IDs and classes for different elements</li>
+          </ul>
+
+          <h3>
+            09/11/2021
+          </h3>
+          <ul>
+            <li> Formated text better with more HTML tags</li>
+            <li> Started adding CSS to some elements on my page like title, images and intro </li>
+          </ul>
+
+          <h3>
+            09/09/2021
+          </h3>
+          <ul>   
+            <li> Added Portfolio, ChangeLog and TODO </li>
+            <li> Corrections made to webpage intro and index.html </li>
+            <li> Added info to Milestone Week #1 </li>
+            <li> Added picture of myself </li>
+            <li> Gave color to text and background </li>
+          </ul>
+
+          <h3>
+            09/03/2021
+          </h3>
+          <ul>
+            <li> Initial GitHub repository and webpage created </li>
+          </ul>
+        </div>
+        
+
+        <div class="col">
+          <h1>
+            TODO
+          </h1>
+          <ul>
+          <li> Practice more HTML and read on more advance tags </li>
+          <li> Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI" target="_blank">this</a> video out later) </li>
+          <li> Read and watch more tutorials on Javascript/Typescript </li>
+          <li> Read and watch tutorials for React and hooks </li>
+          <li> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
+          <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
+          <li> Implementation of more advance techniques and functionality like Javascript/Typescript</li>
+          <li> Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs
+          <li> . . . </li>
+          </li>
+          </ul>
+        </div>
       </div>
-
-      <div>
-        <h2>
-          Milestone Week #2
-        </h2>
-        <p>
-          <br> Coming Soon...
-        </p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <h1>
-          ChangeLog
-        </h1>
-
-        <h3>
-          11/09/2021
-        </h3>
-        <ul>
-          <li>Formated text better with more HTML tags</li>
-          <li> </li>
-        </ul>
-
-        <h3>
-          09/09/2021
-        </h3>
-        <ul>   
-          <li>Added Portfolio, ChangeLog and TODO </li>
-          <li>Corrections made to webpage intro and index.html </li>
-          <li>Added info to Milestone Week #1 </li>
-          <li>Added picture of myself </li>
-          <li>Gave color to text and background </li>
-        </ul>
-
-        <h3>
-          09/03/2021
-        </h3>
-        <ul>
-          <li> Initial GitHub repository and webpage created </li>
-        </ul>
-      </div>
-
-
-      <div class="col">
-        <h1>
-          TODO
-        </h1>
-        <ul>
-         <li> Practice more HTML and read on more advance tags </li>
-         <li> Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI" target="_blank">this</a> video out later) </li>
-         <li> Read and watch more tutorials on Javascript/Typescript </li>
-         <li> Read and watch tutorials for React and hooks </li>
-         <li> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
-         <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
-         <li> Implementation of more advance techniques </li>
-        </ul>
-      </div>
-    </div>
+    </section>
 
   </body>
 
