Fixed intro-img not being fixed to center

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </p>
           </div>
           <div class="col">
-            <div>
-              <img id="intro-img"; src="img/profile.png"; alt="Highschool Graduation, 2017">
+            <div id="intro-img">
+              <img id="img" src="img/profile.png" alt="Highschool Graduation, 2017">
             </div>
           </div>
         </div>
