--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
         <section>
             <div>
                 <ul>
-                    <li>Project 1</li>
-                    <li>Project 2</li>
+                    <li> Flashcard Game that will teach Languages while having fun! Link to the website <a href="">here</a> and the repo <a href=""> here</a>.</li>
+                    <li> Discord Bot that will reproduce music by using APIs! Link to the website <a href="">here</a> and the repo <a href=""> here</a>.</li>
                     <li>Project 3</li>
                 </ul>
             </div>
