--- a/index.html
+++ b/index.html
@@ -105,20 +105,21 @@
 
         <div class="col">
           <h1>
-            TODO
+            TODO Week 2
           </h1>
           <ul>
-          <li> Practice more HTML and read on more advance tags </li>
-          <li> Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI" target="_blank">this</a> video out later) </li>
-          <li> Read and watch more tutorials on Javascript/Typescript </li>
-          <li> Read and watch tutorials for React and hooks </li>
-          <li> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
-          <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
-          <li> Implementation of more advance techniques and functionality like Javascript/Typescript</li>
-          <li> Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs
-          <li> . . . </li>
-          </li>
-          </ul>
+            <li class="done"> Practice more HTML and read on more advance tags </li>
+            <li class="done"> Start implementing CSS styles to Portfolio website (Want to check <a href="https://www.youtube.com/watch?v=yfoY53QXEnI" target="_blank">this</a> video out later) </li>
+            <li class="done"> Read and watch more tutorials on Javascript/Typescript </li>
+            <li> Read and watch tutorials for React and hooks </li>
+            <li class="done"> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
+            <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
+            <li> Implementation of more advance techniques and functionality like Javascript/Typescript</li>
+            <li> NEW! Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs</li>
+            <li> NEW! Import this website to a React App</li>
+            <li> NEW! Start exploring the possibility of doing Git Issues and branching</li>
+            <li><a href="todo.html">Here</a> are the previous weeks' TODOs</li>
+        </ul>
         </div>
       </div>
     </section>
