--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,7 @@
                         As of September, 2021, I am a Senior and about to go through a major change in lifestyle after I graduate next Spring.<br>
                         In hopes of findign a job and produce for a couple years, I have been developed my skills in many different areas and skills across different fields 
                         in order to provide my best to my future employers, and employees if I ever decide to open a company myself.<br><br>
-                        I will update this section regularly just to give an insight of who I am, what my life expectations are, my dreams, wishes and more. :)
+                        <strong>I will update this section regularly just to give an insight of who I am, what my life expectations are, my dreams, wishes and more. :) </strong>
                     </p>
                 </div>
             </section>
