--- a/index.html
+++ b/index.html
@@ -62,46 +62,29 @@
           </h1>
 
           <h3>
+            09/16/2021
+          </h3>
+          <ul>
+            <li> Expanded TODO and Change Log to their own HTML for better control of length of text</li>
+            <li> Started React App for webpage</li>
+          </ul>
+          
+          <h3>
+            09/15/2021
+          </h3>
+          <ul>
+            <li> Complete overhaul of the website design</li>
+          </ul>
+
+          <h3>
             09/13/2021
           </h3>
           <ul>
             <li> Split index.html into more files and changed layout even more with CSS</li>
           </ul>
 
-          <h3>
-            09/12/2021
-          </h3>
-          <ul>
-            <li> Better formatting style like containers, IDs and classes for different elements</li>
-          </ul>
-
-          <h3>
-            09/11/2021
-          </h3>
-          <ul>
-            <li> Formated text better with more HTML tags</li>
-            <li> Started adding CSS to some elements on my page like title, images and intro </li>
-          </ul>
-
-          <h3>
-            09/09/2021
-          </h3>
-          <ul>   
-            <li> Added Portfolio, ChangeLog and TODO </li>
-            <li> Corrections made to webpage intro and index.html </li>
-            <li> Added info to Milestone Week #1 </li>
-            <li> Added picture of myself </li>
-            <li> Gave color to text and background </li>
-          </ul>
-
-          <h3>
-            09/03/2021
-          </h3>
-          <ul>
-            <li> Initial GitHub repository and webpage created </li>
-          </ul>
+          <a href="log.html">See more</a>
         </div>
-        
 
         <div class="col">
           <h1>
@@ -115,9 +98,9 @@
             <li class="done"> Read and watch tutorials for Boostrap (Maybe watch <a href="https://www.youtube.com/watch?v=k32voqQhODc" target="_blank">this</a> video for flexboxing) </li>
             <li> Start flashcard game website with Typescript/CSS/HTML and start section with links for future projects </li>
             <li> Implementation of more advance techniques and functionality like Javascript/Typescript</li>
-            <li> NEW! Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs</li>
-            <li> NEW! Import this website to a React App</li>
-            <li> NEW! Start exploring the possibility of doing Git Issues and branching</li>
+            <li> <strong>NEW!</strong> Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs</li>
+            <li> <strong>NEW!</strong> Import this website to a React App</li>
+            <li> <strong>NEW!</strong> Start exploring the possibility of doing Git Issues and branching</li>
             <li><a href="todo.html">Here</a> are the previous weeks' TODOs</li>
         </ul>
         </div>
