Changed "See more" links for better readability

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li> Split index.html into more files and changed layout even more with CSS</li>
           </ul>
 
-          <a href="log.html">See more</a>
+          <a class="see-more-link" href="log.html">See more</a>
         </div>
 
         <div class="col">
@@ -101,7 +101,7 @@
             <li> <strong>NEW!</strong> Contemplating the possibility of making a Discord bot on Typescript and create a webpage to add the bot to a private server using APIs</li>
             <li> <strong>NEW!</strong> Import this website to a React App</li>
             <li> <strong>NEW!</strong> Start exploring the possibility of doing Git Issues and branching</li>
-            <li><a href="todo.html">Here</a> are the previous weeks' TODOs</li>
+            <a class="see-more-link" href="todo.html">See more</a>
         </ul>
         </div>
       </div>
