--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
         <section>
             <div>
                 <ul>
-                    <li> Flashcard Game that will teach Languages while having fun! Link to the website <a href="">here</a> and the repo <a href=""> here</a>. (In development)</li>
-                    <li> Discord Bot that will reproduce music by using APIs! Link to the website <a href="">here</a> and the repo <a href=""> here</a>. (In development)</li>
+                    <li> Flashcard Game that will teach Languages while having fun! Link to the website <a href="">here</a> and the repo <a href="https://github.com/Zebxcore/Flashcard-game.github.io"> here</a>. (In development)</li>
+                    <li> Discord Bot that will reproduce music by using APIs! Link to the website <a href="">here</a> and the repo <a href="https://github.com/Zebxcore/Saory-the-bot"> here</a>. (In development)</li>
                     <li>Project 3</li>
                 </ul>
             </div>
