--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,13 @@
                       <ul>
                         <li>This week I started watching more videos from week 1 on CSS and advance HTML tags and styling techniques. I learned a couple
                             different tags for both CSS and HTML that helped me organize my portfolio page better.</li>
-                        <li>I went over the <a href="https://flexboxfroggy.com/">flexbox practice</a> from canvas and got <a href="img/milestone 2-1.jpg>">this</a>.</li>
-                        <li>I checked part of <a href="https://www.youtube.com/watch?v=hdI2bqOjy3c">this</a> video out about JavaScript and started some practice on my own like creating classes and stuff.</li>
-                        <li>I went over <a href="https://www.youtube.com/watch?v=JJSoEo8JSnc">this</a> video about flexbox.</li>
+                        <li>I went over the <a href="https://flexboxfroggy.com/" target="_blank">flexbox practice</a> from canvas and got <a href="img/milestone 2-1.jpg>" target="_blank">this</a>.</li>
+                        <li>I checked part of <a href="https://www.youtube.com/watch?v=hdI2bqOjy3c" target="_blank">this</a> video out about JavaScript and started some practice on my own like creating classes and stuff.</li>
+                        <li>I went over <a href="https://www.youtube.com/watch?v=JJSoEo8JSnc" target="_blank">this</a> video about flexbox.</li>
                         <li>Before knowing about React, I was thinking about doing my flashcard game with just HTML, CSS and JavaScript. But now I am just watching videos and gathering some more practice with it before implementing it.</li>
-                        <li>I watched a couple React videos like <a href="https://www.youtube.com/watch?v=jrKcJxF0lAU">this</a> one, but I think I need some more practice before adventuring into implementing this website in React.</li>
+                        <li>I watched a couple React videos like <a href="https://www.youtube.com/watch?v=jrKcJxF0lAU" target="_blank">this</a> one, but I think I need some more practice before adventuring into implementing this website in React.</li>
                         <li>I did a revamp of the whole website using CSS. I noticed, and a couple friends pointed out, that the yellow background and red letter was not a good idea so I changed it!</li>
-                        <li>Splitted my website into different sections for better control and more design opportunities and added a navigation bar with links to those sections using <a href="https://www.youtube.com/watch?v=PwWHL3RyQgk">this</a> video.</li>
+                        <li>Splitted my website into different sections for better control and more design opportunities and added a navigation bar with links to those sections using <a href="https://www.youtube.com/watch?v=PwWHL3RyQgk" target="_blank">this</a> video.</li>
                       </ul>
                     </p>
                 </div>
