--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>
+        All Rights Reserved &copy; 2021
+      </p>
+    </footer>
 
   </body>
 
